css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'PT Sans', sans-serif;
}

:root {
  --violet: #9792e4;
  --lightblue: #b5ddff;
  --blue: #0084fd;
}

main {
  margin-top: 75px;
}

section:nth-child(odd) {
  padding-top: 40px;
  padding-bottom: 60px;
}

section:nth-child(even) {
  background-color: var(--violet);
  padding: 50px 0;
}


h1 {
  font-size: 3.2rem;
}

h2 {
  font-size: 2.6rem;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.6rem;
}

h5 {
  font-size: 1.3rem;
}

.container {
  width: 90%;
  margin: 0 auto;
}

.container-small {
  width: 90%;
  max-width: 480px;
  margin: 0 auto;
}

.flex {
  display: flex;
}

.row {
  flex-direction: column;
  width: 100%;
}

.col {
  width: 100%;
  padding: 10px;
}

.card {
  width: 100%;
}

.photo {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  overflow: hidden;
}

.debug {
  border: 1px solid black;
}

/* HEADER */
header {
  width: 100%;
  height: 75px;
  background-color: var(--blue);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99;
}

header .row {
  flex-direction: row;
  color: white;
  justify-content: space-between;
  align-items: center;
}

header .col nav {
  display: none;
}

header menu {
  justify-content: end;
  font-size: 1.5rem;
}

header nav ul {
  font-size: 1rem;
  list-style: none;
}

header nav li {
  cursor: pointer;
  margin-left: 20px;
}

header nav a {
  color: white;
  text-decoration: none;
}

header nav li:last-child a {
  padding: 5px 10px;
  color: black;
  background-color: white;
  border-radius: 20px;
}
/* fine HEADER */

/* BODY */

/* ACTIVITY */
.activity .col .card {
  text-align: center;
  height: 100%;
  background-color: var(--lightblue);
  padding: 30px;
  border-radius: 20px;
}

.activity h5 {
  color: var(--blue);
}

.activity p {
  font-size: 0.9rem;
  line-height: 1.7rem;
  margin: 25px 0;
}

.activity a {
  display: inline-block;
  text-decoration: none;
  color: white;
  font-weight: bold;
  padding: 10px 50px;
  border-radius: 20px;
  background-color: var(--blue);
  margin: 10px 0;
}

.activity .row .col:first-child .card {
  padding-bottom: 0;
  text-align: left;
}

.activity .img {
  align-items: end;
}

.activity .card img {
  width: 100%;
  max-width: 200px;
}

.activity span {
  display: block;
  font-size: 4.5rem;
  color: var(--blue);
  margin-bottom: 10px;
}
/* fine ACTIVITY */

/* PLANNING AND DEVELOPEMENT */
.plan-develop .row {
  flex-direction: column;
}

.card.planning {
  color: white;
}

.plan-develop img {
  width: 100%;
}

.plan-develop h3 {
  margin-top: 50px;
}

.plan-develop p {
  font-size: 0.9rem;
  line-height: 1.6rem;
  margin: 20px 0;
}

.card.developement {
  text-align: center;
  padding: 25px;
  background-color: white;
  border-radius: 40px;
}

.card.developement p {
  font-style: italic;
} 

.card.developement h5 {
  margin-top: 20px;
}

.card.developement div {
  cursor: pointer;
  width: 50px;
  height: 50px;
  background-color: var(--violet);
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}
/* fine PLANNING AND DEVELOPEMENT */

/* TESTIMONIALS */
.testimonials .col {
  text-align: center;
}

.testimonials .col .card {
  background-color: var(--violet);
}

.testimonials .col .row {
  align-items: center;
  padding: 30px 20px;
}

.testimonials .top h3 {
  color: var(--violet);
  margin: 20px 0;
}

.testimonials .top p {
  line-height: 1.6rem;
  margin: 10px 0;
}

.testimonials .card {
  margin: 20px 0;
  border-radius: 30px;
}

.testimonials img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.testimonials .card p {
  color: white;
  margin: 20px 0;
}

.testimonials .card p i {
  vertical-align: top;
  font-size: 0.8rem;
}

.testimonials .card span {
  color: white;
  font-weight: bold;
}


/* fine TESTIMONIALS */

/* BENEFITS */
.benefits .col .card {
  background-color: white;
  padding: 30px;
}

.benefits h3 {
  text-align: center;
  color: white;
  padding: 0 10px;
  margin-bottom: 50px;
}

.benefits .card {
  border-radius: 20px;
}

.benefits h2 {
  color: var(--violet);
}

.benefits h5 {
  color: var(--violet);
  margin-top: 20px;
}

.benefits p {
  line-height: 1.6rem;
  margin-top: 20px;
  margin-bottom: 30px;
}

.benefits a {
  text-decoration: none;
  color: white;
  font-weight: bold;
  background-color: var(--violet);
  padding: 10px 50px;
  border-radius: 20px;
}
/* fine BENEFITS */

/* ABOUT US */
.about-us .photo {
  background-color: black;
}

.about-us h2 {
  color: var(--violet);
  margin-bottom: 30px;
}

.about-us p {
  line-height: 2rem;
  margin-bottom: 30px;
}

.about-us .card {
  position: relative;
}

.about-us img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.about-us .card i {
  position: absolute;
  color: var(--violet);
  font-size: 3.6rem;
  top: 0;
  left: 150px;
}

.about-us .txt p {
  color: var(--violet);
  font-size: 1.6rem;
  font-weight: bold;
  margin: 20px 0;
}

.about-us .txt a {
  text-decoration: none;
  color: white;
  background-color: var(--violet);
  padding: 5px 10px;
  font-size: 0.9rem;
  border-radius: 20px;
}

.about-us .txt i {
  position: static;
  font-size: 1rem;
  color: white;
  margin-right: 10px;
}
/* fine ABOUT US */

/* GET STARTED */
.get-started {
  color: white;
  text-align: center;
}

.get-started h4 {
  margin: 15px 0;
}

.get-started h1 {
  color: #fdc15f;
  margin: 15px 0;
}

.get-started a.get {
  display: inline-block;
  text-decoration: none;
  color: var(--violet);
  font-weight: bold;
  background-color: white;
  padding: 15px 70px;
  border-radius: 30px;
  margin: 30px 0;
}

.get-started .copyright i {
  vertical-align: middle;
  font-size: 0.2rem;
}

.get-started .copyright a {
  color: white;
}
/* fine GET STARTED */

/* FOOTER */
footer {
  height: 230px;
  background-color: #333333;
  text-align: center;
  color: white;
  padding: 30px 0;
}

footer .row,
footer .container-small {
  height: 100%;
}

footer .row {
  flex-direction: row;
  flex-wrap: wrap;
  align-content: space-between;
}

footer a {
  color: var(--violet);
}
/* fine FOOTER */

/* fine BODY */

